# FSGraphicsProject

./: .gitignore  CMakeLists.txt  FSGraphicsProject.sln  Graphics II Project Rubric.xlsx
DemoDeferredShading/: CMakeLists.txt  DeferredPointLightPass.hlsl  DeferredShadingApp.cpp  DeferredShadingApp.h  DemoDeferredShading.licenseheader  DemoDeferredShading.vcxproj  DemoDeferredShading.vcxproj.filters  PostProcessor_DeferredComposition.hlsl  RDebugMenu.cpp  RDebugMenu.h  RPostProcessor.cpp  RPostProcessor.h  ScreenSpaceRayTracing.hlsl  main.cpp
DemoFightingGame/: AIBehavior_Fighter.cpp  AIBehavior_Fighter.h  AIBehavior_Roamer.cpp  AIBehavior_Roamer.h  AIFighterLogic.cpp  AIFighterLogic.h  CMakeLists.txt  DemoFightingGame.vcxproj  DemoFightingGame.vcxproj.filters  FTGPlayerBehaviors.cpp  FTGPlayerBehaviors.h  FTGPlayerController.cpp  FTGPlayerController.h  FTGPlayerStateMachine.cpp  FTGPlayerStateMachine.h  FightingGameApp.cpp  FightingGameApp.h  FightingGameMain.cpp  PlayerAssets.cpp  PlayerAssets.h  PlayerBehavior_Navigation.cpp  PlayerBehavior_Navigation.h  PlayerController.cpp  PlayerController.h  PlayerControllerBase.cpp  PlayerControllerBase.h  RAStarPathfinder.cpp  RAStarPathfinder.h  RAnimBlendQueue.cpp  RAnimBlendQueue.h  RHeightfieldData.h  RNavMeshData.cpp  RNavMeshData.h  RNavMeshGenDebugger.cpp  RNavMeshGenDebugger.h  RNavMeshGenerator.cpp  RNavMeshGenerator.h  RNavigationSystem.cpp  RNavigationSystem.h  RRegionData.cpp  (+8 more)
FSGraphicsProject/: AmbientOcclusion_PS.hlsl  AmbientOcclusion_VS.hlsl  BumpLighting_PS.hlsl  BumpLighting_VS.hlsl  CMakeLists.txt  Color_PS.hlsl  Color_VS.hlsl  ConstBufferPS.h  ConstBufferVS.h  FSGraphicsProject.licenseheader  FSGraphicsProject.vcxproj  FSGraphicsProject.vcxproj.filters  FSGraphicsProjectApp.cpp  FSGraphicsProjectApp.h  InstancedDepth_PS.hlsl  InstancedDepth_VS.hlsl  InstancedLighting_PS.hlsl  InstancedLighting_VS.hlsl  LightShaderCommon.hlsli  Lighting_PS.hlsl  Lighting_VS.hlsl  Particle_GS.hlsl  Particle_PS.hlsl  Particle_VS.hlsl  PostProcessor_ColorEdgeDetection.hlsl  PostProcessor_GammaCorrection.hlsl  PostProcessor_VS.hlsl  RMesh.cpp  RMesh.h  RPostProcessor.cpp  RPostProcessor.h  RResourceManager.cpp  RResourceManager.h  RSMeshObject.cpp  RSMeshObject.h  RSceneObject.cpp  RSceneObject.h  RShaderManager.cpp  RShaderManager.h  RShadowMap.cpp  (+9 more)
ManagedEngineWrapper/: AssemblyInfo.cpp  CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorAxis.cpp  EditorAxis.h  ManagedEngineWrapper.cpp  ManagedEngineWrapper.h  ManagedEngineWrapper.vcxproj  ManagedEngineWrapper.vcxproj.filters  ManagedMaterial.cpp  ManagedMaterial.h  ManagedSceneObject.cpp  ManagedSceneObject.h  ManagedShader.h  ReadMe.txt  Stdafx.cpp  Stdafx.h  TypeUtils.h  Vector3.h
ManagedInterface/: CMakeLists.txt  IManagedEngine.cs  IManagedSceneObject.cs  ManagedInterface.csproj
ManagedInterface/Properties/: AssemblyInfo.cs
RhinoEngine/: CMakeLists.txt  IResource.h  Rhino.cpp  Rhino.h  RhinoEngine.licenseheader  RhinoEngine.vcxproj  RhinoEngine.vcxproj.filters
RhinoEngine/AI/: RAINavigationComponent.cpp  RAINavigationComponent.h
RhinoEngine/Animation/: AnimCommon.h  RAnimGraph.cpp  RAnimGraph.h  RAnimGraphEditor.cpp  RAnimGraphEditor.h  RAnimNode.cpp  RAnimNode.h  RAnimNode_AnimationPlayer.cpp  RAnimNode_AnimationPlayer.h  RAnimNode_Base.cpp  RAnimNode_Base.h  RAnimNode_BlendByCondition.cpp  RAnimNode_BlendByCondition.h  RAnimNode_BlendPlayer.cpp  RAnimNode_BlendPlayer.h  RAnimNode_ModifyBoneTransform.cpp  RAnimNode_ModifyBoneTransform.h  RAnimation.cpp  RAnimation.h
RhinoEngine/Collision/: RCollision.cpp  RCollision.h
RhinoEngine/Core/: CoreTypes.h  IApp.h  MathHelper.cpp  MathHelper.h  Platform.h  RAabb.cpp  RAabb.h  RColor.cpp  RColor.h  RDebugMenu.cpp  RDebugMenu.h  RDelegate.h  REngine.cpp  REngine.h  RFileUtil.cpp  RFileUtil.h  RInput.cpp  RInput.h  RLog.cpp  RLog.h  RMatrix.cpp  RMatrix.h  RQuat.cpp  RQuat.h  RRay.cpp  RRay.h  RRuntimeTypeObject.cpp  RRuntimeTypeObject.h  RScriptSystem.cpp  RScriptSystem.h  RSerializer.cpp  RSerializer.h  RSingleton.h  RTimer.cpp  RTimer.h  RTransform.cpp  RTransform.h  RVector.h  StdHelper.h  StringUtils.cpp  (+1 more)
RhinoEngine/HLSL/: RFontVertexSignature.hlsl  RMeshVertexSignature.hlsl  RParticleVertexSignature.hlsl  RPrimitiveVertexSignature.hlsl  RSkyboxVertexSignature.hlsl
RhinoEngine/MeshLoader/: RFbxMeshLoader.cpp  RFbxMeshLoader.h
RhinoEngine/Navigation/: RAINavigationComponent.cpp  RAINavigationComponent.h  RAStarPathfinder.cpp  RAStarPathfinder.h  RFunnelPathProcessor.cpp  RFunnelPathProcessor.h  RHeightfieldData.h  RNavMeshCellDetector.cpp  RNavMeshCellDetector.h  RNavMeshData.cpp  RNavMeshData.h  RNavMeshDebugger.cpp  RNavMeshDebugger.h  RNavMeshGenerator.cpp  RNavMeshGenerator.h  RNavMeshRegionSimplifier.cpp  RNavMeshRegionSimplifier.h  RNavigationSystem.cpp  RNavigationSystem.h  RRegionData.h  RVoxelizerDataType.h
RhinoEngine/Physics/: RPhysicsEngine.cpp  RPhysicsEngine.h  RPhysicsPrivate.h  RRigidBodyComponent.cpp  RRigidBodyComponent.h
RhinoEngine/RenderSystem/: BlendState.cpp  BlendState.h  BlendStateEnums.h  D3DCommonPrivate.h  D3DUtil.h  DDSTextureLoader.cpp  ILight.cpp  ILight.h  IResource.h  RAnimation.cpp  RAnimation.h  RDebugRenderBuffer.cpp  RDebugRenderBuffer.h  RDebugRenderer.cpp  RDebugRenderer.h  RDirectionalLightComponent.cpp  RDirectionalLightComponent.h  RMaterial.cpp  RMaterial.h  RMesh.cpp  RMesh.h  RMeshComponent.cpp  RMeshComponent.h  RMeshElement.cpp  RMeshElement.h  RPointLightComponent.cpp  RPointLightComponent.h  RPostProcessorManager.cpp  RPostProcessorManager.h  (+26 more)
RhinoGameUtils/: CMakeLists.txt  RFreeFlyCameraControl.cpp  RFreeFlyCameraControl.h  RhinoGameUtils.h
RhinoLevelEditor/: CMakeLists.txt  EditorMainForm.Designer.cs  EditorMainForm.cs  EngineAssetData.cs  EngineCanvas.Designer.cs  EngineCanvas.cs  Form1.Designer.cs  Form1.cs  Program.cs  RhinoLevelEditor.csproj
SimpleGameProject/: CMakeLists.txt  RgRubik.cpp  RgRubik.h  SimpleGame.cpp  SimpleGame.h  SimpleGameProject.vcxproj  SimpleGameProject.vcxproj.filters  TestMovingComponent.cpp  TestMovingComponent.h  main.cpp
(+291 files in other folders)
