CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release")
SET(CMAKE_CXX_STANDARD 11)

PROJECT(RhinoEngine)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binaries)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binaries)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binaries)

# Visual Studio platform targert (x86 or x64)
IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
	SET(MSVC_PLATFORM_TARGET "x64")
ELSE()
	SET(MSVC_PLATFORM_TARGET "x86")
ENDIF()

# Use Unicode character set (MSVC)
ADD_DEFINITIONS(-DUNICODE -D_UNICODE)

# Multi-processor compilation support (MSVC)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")

SET(RHINO_ENGINE_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/RhinoEngine)

# Set up linking directory for libfbx
SET(FBX_LIB_DIR "${CMAKE_SOURCE_DIR}/fbx/lib/${MSVC_PLATFORM_TARGET}")
LINK_DIRECTORIES(${FBX_LIB_DIR})

# Link libfbx as dll
ADD_DEFINITIONS(-DFBXSDK_SHARED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY(RhinoEngine)
ADD_SUBDIRECTORY(ManagedInterface)
ADD_SUBDIRECTORY(ManagedEngineWrapper)
ADD_SUBDIRECTORY(RhinoLevelEditor)
ADD_SUBDIRECTORY(FSGraphicsProject)
ADD_SUBDIRECTORY(SimpleGameProject)
ADD_SUBDIRECTORY(DemoFightingGame)
ADD_SUBDIRECTORY(DemoDeferredShading)
