CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(CMAKE_CONFIGURATION_TYPES "Debug;Release")
SET(CMAKE_CXX_STANDARD 11)

PROJECT(RhinoEngine)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binaries)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binaries)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Binaries)

# Platform targert (x86 or x64)
IF("${CMAKE_SIZEOF_VOID_P}" EQUAL "8")
	SET(BUILD_PLATFORM_TARGET "x64")
ELSE()
	SET(BUILD_PLATFORM_TARGET "x86")
ENDIF()

IF(MSVC)
	# Use Unicode character set
	ADD_DEFINITIONS(-DUNICODE -D_UNICODE)

	# Multi-processor compilation support
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
ENDIF()

IF(XCODE)
    # C++14 support
    SET(CMAKE_CXX_STANDARD 14)
ENDIF()

SET(RHINO_ENGINE_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/RhinoEngine)
SET(RHINO_GAME_UTILS_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/RhinoGameUtils)

# Set up linking directory for libfbx
SET(FBX_LIB_DIR "${CMAKE_SOURCE_DIR}/ThirdParty/fbxsdk/lib/${BUILD_PLATFORM_TARGET}")
LINK_DIRECTORIES(${FBX_LIB_DIR})

# Link libfbx as dll
ADD_DEFINITIONS(-DFBXSDK_SHARED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_SUBDIRECTORY(RhinoEngine)
ADD_SUBDIRECTORY(RhinoWorkshop)

ADD_SUBDIRECTORY(ThirdParty/Bullet3)
SET_TARGET_PROPERTIES(Bullet3Common PROPERTIES FOLDER ThirdParty/Bullet3)
SET_TARGET_PROPERTIES(BulletCollision PROPERTIES FOLDER ThirdParty/Bullet3)
SET_TARGET_PROPERTIES(BulletDynamics PROPERTIES FOLDER ThirdParty/Bullet3)
SET_TARGET_PROPERTIES(BulletInverseDynamics PROPERTIES FOLDER ThirdParty/Bullet3)
SET_TARGET_PROPERTIES(BulletSoftBody PROPERTIES FOLDER ThirdParty/Bullet3)
SET_TARGET_PROPERTIES(LinearMath PROPERTIES FOLDER ThirdParty/Bullet3)

ADD_SUBDIRECTORY(RhinoGameUtils)

ADD_SUBDIRECTORY(FSGraphicsProject)
ADD_SUBDIRECTORY(SimpleGameProject)
ADD_SUBDIRECTORY(DemoFightingGame)
ADD_SUBDIRECTORY(DemoDeferredShading)
