CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(DemoFightingGame)

# Recursively find all .cpp and .h files
FILE(GLOB SRC
	 "*.cpp"
	 "*.h"
)

INCLUDE_DIRECTORIES(${RHINO_ENGINE_INCLUDE_DIR} ${RHINO_GAME_UTILS_INCLUDE_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} WIN32 ${SRC})
ADD_DEPENDENCIES(${PROJECT_NAME} RhinoEngine RhinoGameUtils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} RhinoEngine RhinoGameUtils)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} libfbxsdk.lib)
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/${PROJECT_NAME}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER Games)

# Copy libfbxsdk.dll to the executable directory
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}
	POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different
		${FBX_LIB_DIR}/$<CONFIG>/libfbxsdk.dll
		$<TARGET_FILE_DIR:${PROJECT_NAME}>/.
)
