CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(ManagedInterface VERSION 0.1.0 LANGUAGES CSharp)

# Recursively find all .cpp and .h files
FILE(GLOB SRC
	 "*.cs"
)

ADD_LIBRARY(ManagedInterface SHARED ${SRC})
SET_TARGET_PROPERTIES(ManagedInterface PROPERTIES COMMON_LANGUAGE_RUNTIME "")
SET_TARGET_PROPERTIES(ManagedInterface PROPERTIES VS_DOTNET_REFERENCES "System;System.Core;System.Data;System.Drawing;System.Xml")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER Editor)
