CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(RhinoGameUtils)

# Recursively find all .cpp and .h files
FILE(GLOB SRC
	 "*.cpp"
	 "*.h"
)

INCLUDE_DIRECTORIES(${RHINO_ENGINE_INCLUDE_DIR})
ADD_LIBRARY(${PROJECT_NAME} ${SRC})
ADD_DEPENDENCIES(${PROJECT_NAME} RhinoEngine)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER Libs)
