CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(RhinoLevelEditor VERSION 0.1.0 LANGUAGES CSharp)

INCLUDE(CSharpUtilities)

# Recursively find all .cpp and .h files
FILE(GLOB SRC
	 "*.cs"
	 "*.h"
	 "*.resx"
	 "*.settings"
)

CSHARP_SET_WINDOWS_FORMS_PROPERTIES(${SRC})
SET_SOURCE_FILES_PROPERTIES(EngineCanvas.cs PROPERTIES VS_CSHARP_SubType "UserControl")

INCLUDE_DIRECTORIES(${RHINO_ENGINE_INCLUDE_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} App.config ${SRC})
ADD_DEPENDENCIES(${PROJECT_NAME} ManagedInterface ManagedEngineWrapper)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMMON_LANGUAGE_RUNTIME "")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VS_DOTNET_REFERENCES "System;System.Core;System.Data;System.Drawing;System.Windows.Forms;System.Xml")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DOTNET_TARGET_FRAMEWORK_VERSION "v4.5.2")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES VS_GLOBAL_ROOTNAMESPACE ${PROJECT_NAME})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES FOLDER Editor)

# Copy libfbxsdk.dll to the executable directory
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME}
	POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy_if_different
		${FBX_LIB_DIR}/$<CONFIG>/libfbxsdk.dll
		$<TARGET_FILE_DIR:${PROJECT_NAME}>/.
)
